--- a/css/style.css
+++ b/css/style.css
@@ -162,10 +162,46 @@ body {
   text-transform: uppercase;
 }
 
-
 .bike__list-text {
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   margin: auto 0;
+}
+
+
+.info {
+  margin-bottom: 150px;
+}
+
+.info__inner {
+  display: flex;
+}
+
+.info__img {
+  margin-right: 60px;
+  flex-basis: 570px;
+  object-fit: cover;
+}
+
+.info__item-title {
+  font-size: 16px;
+  text-transform: uppercase;
+  line-height: 19px;
+  margin: 0 0 10px;
+}
+
+.info__item-text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.2;
+  max-width: 450px;
+}
+
+.info__list {
+  flex-basis: 490px;
+}
+
+.info__item+.info__item {
+  padding-top: 50px;
 }
