--- a/css/style.css
+++ b/css/style.css
@@ -254,3 +254,16 @@ body {
 .characteristic__descr {
   flex-basis: 285px;
 }
+
+.slider{
+  margin-bottom: 50px;
+}
+
+.slider__items .slick-dots{
+  top: 0;
+  left: 0;
+}
+
+.slider__item{
+  padding-left: 50px;
+}
