--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ body {
   display: inline-block;
   background-color: #131313;
   color: #fff;
-  padding: 28px 81px;
+  padding: 28px 71px 28px 81px;
   text-transform: uppercase;
   font-size: 20px;
   line-height: 24px;
@@ -255,15 +255,155 @@ body {
   flex-basis: 285px;
 }
 
-.slider{
+.slider {
   margin-bottom: 50px;
 }
 
-.slider__items .slick-dots{
+.slider__items .slick-dots {
   top: 0;
   left: 0;
 }
 
-.slider__item{
+.slider__item {
   padding-left: 50px;
+}
+
+.price {
+  margin-bottom: 100px;
+}
+
+.price__inner {
+  position: relative;
+}
+
+.form {
+  max-width: 420px;
+}
+
+.form__title {
+  margin-bottom: 40px;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+}
+
+.form__text {
+  max-width: 300px;
+  margin-bottom: 30px;
+}
+
+.form__input-name,
+.form__input-phone {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #131313;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  outline: none;
+}
+
+.form__input-name::placeholder,
+.form__input-phone::placeholder,
+.form__input-text {
+  color: #6f6f66;
+  opacity: 0.5;
+}
+
+.form__input-text {
+  margin-bottom: 10px;
+}
+
+.form__label-box {
+  display: flex;
+  margin-bottom: 50px;
+}
+
+.form__label+.form__label {
+  margin-left: 23px;
+}
+
+.form__input-radio {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+}
+
+.form__input-radio:checked+.form__bike {
+  display: block;
+}
+
+.form__bike {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.form__bike-price {
+  font-size: 32px;
+  position: absolute;
+  top: 30px;
+  left: 0;
+  right: 0;
+  width: 220px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ff4040;
+  border-radius: 50%;
+  transform: translateX(-50%);
+}
+
+.form__bike-price::after {
+  content: '';
+  position: absolute;
+  width: 220px;
+  height: 100px;
+  border: 1px solid #ff4040;
+  border-radius: 50%;
+  top: 12px;
+  left: 0;
+}
+
+
+.form__radio-style {
+  border-radius: 30px;
+  width: 80px;
+  height: 12px;
+  cursor: pointer;
+  transition: all .3s;
+}
+
+.form__radio-style--grey {
+  background-color: #6F6F6F;
+}
+
+.form__radio-style--white {
+  background-color: #FFFFFF;
+  border: 1px solid #6F6F6F;
+}
+
+.form__radio-style--red {
+  background-color: #FF4040;
+}
+
+.form__btn {
+  width: 100%;
+  border: none;
+  background-color: #131313;
+  color: #fff;
+  padding: 28px 71px 28px 81px;
+  text-transform: uppercase;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 1.1em;
+  cursor: pointer;
+  transition: background-color .3s;
+}
+
+.form__btn:hover {
+  background-color: #FF4040;
 }
