--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ body {
 }
 
 .bike {
-  padding: 100px 0 150px;
+  padding: 100px 0 0;
 }
 
 .bike__inner {
@@ -171,7 +171,8 @@ body {
 }
 
 .info {
-  margin-bottom: 150px;
+  padding-top: 150px;
+  margin-bottom: 50px;
 }
 
 .info__inner {
@@ -207,6 +208,7 @@ body {
 }
 
 .characteristic {
+  padding-top: 100px;
   margin-bottom: 150px;
 }
 
