--- a/css/style.css
+++ b/css/style.css
@@ -657,6 +657,23 @@ body {
   .form__bike-price::after {
     display: none;
   }
+
+  .footer__inner {
+    display: block;
+    height: auto;
+    padding: 15px 0;
+    text-align: center;
+  }
+
+  .footer__social {
+    padding: 15px 0;
+  }
+
+  .footer__contacts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 @media (max-width: 460px) {
@@ -694,14 +711,16 @@ body {
   .form__label-box {
     margin-bottom: 200px;
   }
-  .price__inner{
+
+  .price__inner {
     text-align: center;
   }
 
-  .form__text{
+  .form__text {
     max-width: 100%;
   }
-  .form__label-box{
+
+  .form__label-box {
     justify-content: center;
   }
 }
@@ -715,5 +734,3 @@ body {
     font-size: 12px;
   }
 }
-
-@media (max-width:) {}
